--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,1 +1,29 @@
 
+.cityList{
+    width: 300px;
+    height: 400px;
+    /* background-color: antiquewhite; */
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+}
+
+input{
+    width:300px;
+    padding: 8px;
+}
+.cityP{
+    padding: 8px;
+    /* background-color: aqua; */
+    margin: none
+
+}
+
+.cityP:hover{
+    background-color: green;
+    color: yellow;
+    
+}
+.cityP:active{
+    transform: scale(1,1.1);
+}
